--- a/SiwBooks/src/main/resources/application.properties
+++ b/SiwBooks/src/main/resources/application.properties
@@ -1,17 +1,16 @@
 spring.application.name=SiwBooks
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://localhost:5432/books
-spring.datasource.username=postgres
-spring.datasource.password=postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
-server.port=${PORT:8080}
+spring.datasource.url=jdbc:postgresql://books_db_gr9y_user:8080/books_db_gr9y
+spring.datasource.username=books_db_gr9y_user
+spring.datasource.password=GczHUhyQ38yqnRR11v0s2XuArPVYRa0I
+spring.jpa.hibernate.ddl-auto=update
+
 
 # Mostra le query SQL nei log
 spring.jpa.show-sql=true
 
 # Assicura che Hibernate non sovrascriva i dati
-spring.jpa.hibernate.ddl-auto=create
 spring.jpa.properties.hibernate.default_schema=public
 
 # Testing
