--- a/SiwBooks/src/main/resources/application.properties
+++ b/SiwBooks/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 spring.application.name=SiwBooks
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://books_db_gr9y_user:8080/books_db_gr9y
+spring.datasource.url=jdbc:postgresql://dpg-d1c1hdadbo4c73cfuq7g-a:5432/books-db
 spring.datasource.username=books_db_gr9y_user
 spring.datasource.password=GczHUhyQ38yqnRR11v0s2XuArPVYRa0I
 spring.jpa.hibernate.ddl-auto=update
-
-
-# Mostra le query SQL nei log
 spring.jpa.show-sql=true
+
+
 
 # Assicura che Hibernate non sovrascriva i dati
 spring.jpa.properties.hibernate.default_schema=public
