--- a/SiwBooks/src/main/resources/application.properties
+++ b/SiwBooks/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=SiwBooks
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://dpg-d1c1hdadbo4c73cfuq7g-a:5432/booksdb
+spring.datasource.url=jdbc:postgresql://dpg-d1c1hdadbo4c73cfuq7g-a.oregon-postgres.render.com:5432/books_db_gr9y
 spring.datasource.username=books_db_gr9y_user
 spring.datasource.password=GczHUhyQ38yqnRR11v0s2XuArPVYRa0I
 spring.jpa.hibernate.ddl-auto=update
