--- a/SiwBooks/src/main/resources/application.properties
+++ b/SiwBooks/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=never
+spring.sql.init.mode=always
 spring.sql.init.platform=postgres
 spring.jpa.defer-datasource-initialization=true
 logging.level.org.hibernate.SQL=DEBUG
