--- a/SiwBooks/src/main/resources/application.properties
+++ b/SiwBooks/src/main/resources/application.properties
@@ -17,6 +17,7 @@ spring.thymeleaf.suffix=.html
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
 spring.sql.init.platform=postgres
 spring.jpa.defer-datasource-initialization=true
 logging.level.org.hibernate.SQL=DEBUG
