--- a/SiwBooks/src/main/resources/application.properties
+++ b/SiwBooks/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.platform=postgres
