--- a/SiwBooks/src/main/resources/application.properties
+++ b/SiwBooks/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.url=jdbc:postgresql://dpg-d1c1hdadbo4c73cfuq7g-a.oregon-postgr
 spring.datasource.username=books_db_gr9y_user
 spring.datasource.password=GczHUhyQ38yqnRR11v0s2XuArPVYRa0I
 spring.jpa.show-sql=true
+server.port=${PORT:8080}
 
 # Assicura che Hibernate non sovrascriva i dati
 spring.jpa.properties.hibernate.default_schema=public
@@ -15,7 +16,7 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.platform=postgres
