--- a/SiwBooks/src/main/resources/application.properties
+++ b/SiwBooks/src/main/resources/application.properties
@@ -1,31 +1,33 @@
 spring.application.name=SiwBooks
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://dpg-d1c1hdadbo4c73cfuq7g-a.oregon-postgres.render.com:5432/books_db_gr9y
-spring.datasource.username=books_db_gr9y_user
-spring.datasource.password=GczHUhyQ38yqnRR11v0s2XuArPVYRa0I
+spring.datasource.url=jdbc:postgresql://dpg-d1cpob3e5dus73a68k6g-a.oregon-postgres.render.com:5432/booksdb_vtdv
+spring.datasource.username=booksdb_vtdv_user
+spring.datasource.password=0b7Fq1cG1ngkGmYdRMYdK7LFAXL1opX2
+
 spring.jpa.show-sql=true
 server.port=${PORT:8080}
 
-# Assicura che Hibernate non sovrascriva i dati
-spring.jpa.properties.hibernate.default_schema=public
-
-# Testing
+# Dialetto PostgreSQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Inizializzazione e DDL
+spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.defer-datasource-initialization=true
+
+# Thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+# Hibernate
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
-spring.sql.init.platform=postgres
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql=trace
+spring.jpa.properties.hibernate.default_schema=public
 spring.datasource.hikari.auto-commit=false
 
-
-#DEBUG
+# Logging
 logging.level.org.springframework=DEBUG
 logging.level.it.uniroma3.siw=DEBUG
-logging.level.org.hibernate=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=TRACE
