--- a/SiwBooks/src/main/resources/application.properties
+++ b/SiwBooks/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=SiwBooks
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://dpg-d1cpob3e5dus73a68k6g-a.oregon-postgres.render.com:5432/booksdb_vtdv
+spring.datasource.url=jdbc:postgresql://dpg-d1cpob3e5dus73a68k6g-a.frankfurt-postgres.render.com:5432/booksdb_vtdv
 spring.datasource.username=booksdb_vtdv_user
-spring.datasource.password=0b7Fq1cG1ngkGmYdRMYdK7LFAXL1opX2
+spring.datasource.password=0b7Fq1cGlngkGmYdRMydK7LFAXL1opX2
 
 spring.jpa.show-sql=true
 server.port=${PORT:8080}
