--- a/SiwBooks/src/main/resources/application.properties
+++ b/SiwBooks/src/main/resources/application.properties
@@ -8,26 +8,25 @@ spring.datasource.password=0b7Fq1cGlngkGmYdRMydK7LFAXL1opX2
 spring.jpa.show-sql=true
 server.port=${PORT:8080}
 
-# Dialetto PostgreSQL
+# Assicura che Hibernate non sovrascriva i dati
+spring.jpa.properties.hibernate.default_schema=public
+
+# Testing
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-
-# Inizializzazione e DDL
-spring.sql.init.mode=always
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.defer-datasource-initialization=true
-
-# Thymeleaf
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
-
-# Hibernate
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.default_schema=public
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.platform=postgres
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql=trace
 spring.datasource.hikari.auto-commit=false
 
-# Logging
+
+#DEBUG
 logging.level.org.springframework=DEBUG
 logging.level.it.uniroma3.siw=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql=TRACE
+logging.level.org.hibernate=DEBUG
