--- a/SiwBooks/src/main/resources/application.properties
+++ b/SiwBooks/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=create
-spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=update
+spring.sql.init.mode=never
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.platform=postgres
 logging.level.org.hibernate.SQL=DEBUG
