--- a/SiwBooks/src/main/resources/application.properties
+++ b/SiwBooks/src/main/resources/application.properties
@@ -1,9 +1,14 @@
 spring.application.name=SiwBooks
 
 # DATABASE
-spring.datasource.url=jdbc:postgresql://dpg-d1cpob3e5dus73a68k6g-a.oregon-postgres.render.com:5432/booksdb_vtdv
-spring.datasource.username=booksdb_vtdv_user
-spring.datasource.password=0b7Fq1cGlngkGmYdRMydK7LFAXL1opX2
+# spring.datasource.url=jdbc:postgresql://dpg-d1cpob3e5dus73a68k6g-a.oregon-postgres.render.com:5432/booksdb_vtdv
+# spring.datasource.username=booksdb_vtdv_user
+# spring.datasource.password=0b7Fq1cGlngkGmYdRMydK7LFAXL1opX2
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/books
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.show-sql=true
 server.port=${PORT:8080}
@@ -17,8 +22,8 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.sql.init.mode=never
+spring.jpa.hibernate.ddl-auto=create
+spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.platform=postgres
 logging.level.org.hibernate.SQL=DEBUG
